--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
   ],
   "content_scripts": [
     {
-      "matches": ["https://*/*"],
+      "matches": ["<all_urls>"],
       "js": ["content/content.js"],
       "run_at": "document_idle"
     }
